// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorModal matches snapshot 1`] = `
<div
  className="error-modal styles__ModalWrapper-sc-1gxqzoa-6 bfHzdf"
>
  <div
    className="styles__CardWrapper-sc-1gxqzoa-7 llgsuk"
  >
    <div
      className="styles__Card-sc-1gxqzoa-0 cPBKEa"
    >
      <header
        className="styles__Header-sc-1gxqzoa-1 knqvba"
      >
        <h1
          className="styles__Heading-sc-1gxqzoa-2 eqDSaw"
        >
          Error
        </h1>
        <svg
          aria-hidden="true"
          className="styles__CloseModalIcon-sc-1gxqzoa-8 jWxogI"
          focusable="false"
          height="15px"
          onClick={[Function]}
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </header>
      <div
        className="styles__Body-sc-1gxqzoa-4 eIyaEL"
      >
        <h3
          className="styles__BodyHeading-sc-1gxqzoa-3 krnhWx"
        >
          Uh-oh, there's been a glitch
        </h3>
        <div
          className="ErrorModal__BodyErrorText-sc-1q7eiy-0 glzJJQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
  We're not quite sure what went wrong. Refresh the page. If this doesn't solve
  the problem, visit our <a href=\\"https://openstax.secure.force.com/help\\" target=\\"_blank\\">Support Center</a>.
",
            }
          }
        />
      </div>
      <div
        className="styles__Footer-sc-1gxqzoa-9 eKsEVO"
      >
        <button
          className="Button-ayg7nk-0 hzAjPv"
          data-testid="clear-error"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    className="styles__Mask-sc-1gxqzoa-5 bsZwaD"
  />
</div>
`;

exports[`ErrorModal matches snapshots with recorded error ids 1`] = `
<div
  className="error-modal styles__ModalWrapper-sc-1gxqzoa-6 bfHzdf"
>
  <div
    className="styles__CardWrapper-sc-1gxqzoa-7 llgsuk"
  >
    <div
      className="styles__Card-sc-1gxqzoa-0 cPBKEa"
    >
      <header
        className="styles__Header-sc-1gxqzoa-1 knqvba"
      >
        <h1
          className="styles__Heading-sc-1gxqzoa-2 eqDSaw"
        >
          Error
        </h1>
        <svg
          aria-hidden="true"
          className="styles__CloseModalIcon-sc-1gxqzoa-8 jWxogI"
          focusable="false"
          height="15px"
          onClick={[Function]}
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </header>
      <div
        className="styles__Body-sc-1gxqzoa-4 eIyaEL"
      >
        <h3
          className="styles__BodyHeading-sc-1gxqzoa-3 krnhWx"
        >
          Uh-oh, there's been a glitch
        </h3>
        <div
          className="ErrorModal__BodyErrorText-sc-1q7eiy-0 glzJJQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": "
  We're not quite sure what went wrong. Refresh the page. If this doesn't solve
  the problem, visit our <a href=\\"https://openstax.secure.force.com/help\\" target=\\"_blank\\">Support Center</a>.
",
            }
          }
        />
        <div
          className="ErrorIdList-sc-1coujqm-0 dXzSc"
        >
          some-error-id
        </div>
      </div>
      <div
        className="styles__Footer-sc-1gxqzoa-9 eKsEVO"
      >
        <button
          className="Button-ayg7nk-0 hzAjPv"
          data-testid="clear-error"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    className="styles__Mask-sc-1gxqzoa-5 bsZwaD"
  />
</div>
`;
